--- a/views/testdrive.pug
+++ b/views/testdrive.pug
@@ -31,6 +31,6 @@ block content
                     label Where will your test drive happen?
                     select.form-control(name='location')
                         option(value='dealer') I'll come by the dealership
-                        option(value='other') At a location of my choice (specify)
+                        option(value='other') Bring it to me
                 
                 button.btn.btn-default(type='submit') Submit
