--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .content {
-  flex-basis: 90vh;
+  min-height: 90vh;
   display: flex;
   justify-content: center;
 }
@@ -66,6 +66,7 @@ body {
   background-color: darkgrey;
   padding: 4vh;
   align-self: center;
+  margin: 4vh 0vh;
 }
 
 .leadform h1 {
