--- a/views/testdrive.pug
+++ b/views/testdrive.pug
@@ -9,9 +9,9 @@ block content
         .leadform
             h1 Take a Test Drive Today
             form(action='/leadform' method='post')
-                .form-group(name='model')
+                .form-group
                     label Model
-                    select.form-control
+                    select.form-control(name='model')
                         option(value='Flare') Flare
                         option(value='Flash') Flash
                         option(value='Flint') Flint
